--- a/requirements.txt
+++ b/requirements.txt
@@ -143,10 +143,11 @@ terminado==0.15.0
 thinc==8.1.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
-torch==1.12.1+cu116
-torchaudio==0.12.1+cu116
+torch==1.12.1
+torch-tb-profiler==0.4.0
+torchaudio==0.12.1
 torchmetrics==0.9.3
-torchvision==0.13.1+cu116
+torchvision==0.13.1
 tornado==6.2
 tqdm==4.64.0
 traitlets==5.3.0
